--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "angular": "^1.4.8",
     "express": "^4.17.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router": "^5.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
